--- a/web_static/100-index.html
+++ b/web_static/100-index.html
@@ -81,14 +81,14 @@
                     <h2>Reviews</h2>
                     <ul>
                         <li>
-                            <h3></h3>
-                            <p></p>
+                            <h3>From Bob Dylan the 27th January 2017</h3>
+                            <p>Comfortable space</p>
                         </li>
                     </ul>
                     <ul>
                         <li>
-                            <h3></h3>
-                            <p></p>
+                            <h3>From Tom Bruise the 27th February 2018</h3>
+                            <p>I felt at home here</p>
                         </li>
                     </ul>
                 </div>
@@ -130,14 +130,14 @@
                     <h2>Reviews</h2>
                     <ul>
                         <li>
-                            <h3></h3>
-                            <p></p>
+                            <h3>From Bob Dylan the 27th January 2017</h3>
+                            <p>Comfortable space</p>
                         </li>
                     </ul>
                     <ul>
                         <li>
-                            <h3></h3>
-                            <p></p>
+                            <h3>From Tom Bruise the 27th February 2018</h3>
+                            <p>I felt at home here</p>
                         </li>
                     </ul>
                 </div>
