--- a/web_static/1-index.html
+++ b/web_static/1-index.html
@@ -14,7 +14,7 @@
 <body style="margin: 0; padding: 0;">
     <header ></header>
     <footer>
-        <p>Best School</p>
+        <p>Holberton School</p>
     </footer>
 </body>
 </html>
