--- a/web_static/2-index.html
+++ b/web_static/2-index.html
@@ -12,7 +12,7 @@
 <body>
     <header></header>
     <footer>
-        <p>Best School</p>
+        <p>Holberton School</p>
     </footer>
 </body>
 </html>
