added code for icon

--- a/web_static/3-index.html
+++ b/web_static/3-index.html
@@ -15,7 +15,7 @@
         <div class="icon"></div>
     </header>
     <footer>
-        <p>Best School</p>
+        <p>Holberton School</p>
     </footer>
 </body>
 </html>
