static page with header, footer, search box and button

--- a/web_static/4-index.html
+++ b/web_static/4-index.html
@@ -21,7 +21,7 @@
         </section>
     </div>
     <footer>
-        <p>Best School</p>
+        <p>Holberton Schooll</p>
     </footer>
 </body>
 </html>
