static page with header, footer, a filters box with dropdown and results

--- a/web_static/7-index.html
+++ b/web_static/7-index.html
@@ -57,7 +57,7 @@
         </section>
     </div>
     <footer>
-        <p>Best School</p>
+        <p>Holberton School</p>
     </footer>
 </body>
 </html>
